css mobile overflow issue fix

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,8 @@
     padding: 0;
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
+    overflow: auto;
+    outline: solid 1px red;
 }
 
 body {
